<resources>
    <string name="app_name">Popular Movies</string>
    <string name="image_description">Movie Poster</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="plot">Synopsis</string>
    <string name="avg_vote">Average Vote</string>
    <string name="poster">Poster</string>
    <string name="sort_by_popular">Sort By Popular</string>
    <string name="sort_by_top_rated">Sort By Top Rated</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="favorite">favorite</string>
    <string name="click_below_to_favorite">Click below to Favorite</string>
    <string name="open_review">Open Review</string>
    <string name="favorites">Favorites</string>
</resources>
